--- a/.swcrc
+++ b/.swcrc
@@ -1,24 +1,14 @@
 {
-    "$schema": "https://json.schemastore.org/swcrc",
+    "sourceMaps": true,
     "jsc": {
       "parser": {
         "syntax": "ecmascript",
-        "jsx": false,
-        "dynamicImport": false,
-        "privateMethod": false,
-        "functionBind": false,
-        "exportDefaultFrom": false,
-        "exportNamespaceFrom": false,
-        "decorators": false,
-        "decoratorsBeforeExport": false,
-        "topLevelAwait": false,
-        "importMeta": false
+        "jsx": true
       },
-      "transform": null,
-      "target": "es5",
-      "loose": false,
-      "externalHelpers": false,
-      "keepClassNames": false
-    },
-    "minify": false
+      "transform": {
+        "react": {
+          "runtime": "automatic"
+        }
+      }
+    }
   }
