--- a/package.json
+++ b/package.json
@@ -12,11 +12,13 @@
   },
   "dependencies": {
     "@swc/core": "^1.3.96",
+    "@testing-library/user-event": "^14.5.1",
     "@types/jest": "^29.5.8",
     "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-jest-dom": "^5.1.0",
     "eslint-plugin-prettier": "^5.0.1",
     "jest-google-maps-mock": "^1.0.7",
+    "jest-mock": "^29.7.0",
     "prettier": "^3.1.0",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
